--- a/config/logging.conf
+++ b/config/logging.conf
@@ -1,4 +1,4 @@
-# Example logkit configuration.
+# Example corekit configuration.
 # Lines beginning with # or // are ignored.
 
 log_dir = logs
@@ -26,3 +26,5 @@ v = 1
 max_log_size = 50          # MB
 logbufsecs = 1             # Flush quickly for demos
 stop_logging_if_full_disk = false
+
+
