feat: optimize IPC ring design and add validation tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
-project(corekit LANGUAGES CXX)
+project(corekit LANGUAGES C CXX)
 
 set(CMAKE_POLICY_VERSION_MINIMUM "3.5")
 
@@ -13,7 +13,11 @@ if(NOT DEFINED BUILD_SHARED_LIBS)
   set(BUILD_SHARED_LIBS ON)
 endif()
 
-option(COREKIT_FETCH_DEPS "Fetch glog if not found" ON)
+set(COREKIT_THIRDPARTY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/3party" CACHE PATH
+    "Local third-party root directory")
+option(COREKIT_USE_LOCAL_THIRDPARTY_ONLY
+       "Require all dependencies from local 3party directory"
+       ON)
 option(COREKIT_BUNDLE_DEPS_STATIC
        "Build glog from source as static lib and link it into shared corekit"
        ON)
@@ -22,45 +26,28 @@ option(COREKIT_BUILD_TESTS "Build tests" ON)
 option(COREKIT_ENABLE_MIMALLOC_BACKEND "Enable mimalloc backend support" OFF)
 option(COREKIT_ENABLE_TBBMALLOC_BACKEND "Enable tbbmalloc backend support" OFF)
 
+set(COREKIT_GLOG_DIR "${COREKIT_THIRDPARTY_DIR}/glog")
+set(COREKIT_MIMALLOC_DIR "${COREKIT_THIRDPARTY_DIR}/mimalloc")
+set(COREKIT_ONETBB_DIR "${COREKIT_THIRDPARTY_DIR}/oneTBB")
+
+if (NOT EXISTS "${COREKIT_GLOG_DIR}/CMakeLists.txt")
+  message(FATAL_ERROR "Missing local dependency: ${COREKIT_GLOG_DIR}")
+endif()
+
 if (COREKIT_BUNDLE_DEPS_STATIC)
   if (NOT BUILD_SHARED_LIBS)
     message(FATAL_ERROR
             "COREKIT_BUNDLE_DEPS_STATIC=ON requires BUILD_SHARED_LIBS=ON for corekit")
   endif()
-  include(FetchContent)
-  FetchContent_Declare(
-    glog
-    GIT_REPOSITORY https://github.com/google/glog.git
-    GIT_TAG v0.6.0
-  )
-  set(WITH_GFLAGS OFF CACHE BOOL "" FORCE)
-  set(_corekit_prev_build_testing ${BUILD_TESTING})
-  set(BUILD_TESTING OFF CACHE BOOL "" FORCE)
-  set(_corekit_prev_build_shared_libs ${BUILD_SHARED_LIBS})
-  set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
-  FetchContent_MakeAvailable(glog)
-  set(BUILD_SHARED_LIBS ${_corekit_prev_build_shared_libs} CACHE BOOL "" FORCE)
-  set(BUILD_TESTING ${_corekit_prev_build_testing} CACHE BOOL "" FORCE)
-else()
-  find_package(glog QUIET)
-
-  if (NOT glog_FOUND)
-    if (NOT COREKIT_FETCH_DEPS)
-      message(FATAL_ERROR "glog not found and COREKIT_FETCH_DEPS=OFF")
-    endif()
-    include(FetchContent)
-    FetchContent_Declare(
-      glog
-      GIT_REPOSITORY https://github.com/google/glog.git
-      GIT_TAG v0.6.0
-    )
-    set(WITH_GFLAGS OFF CACHE BOOL "" FORCE)
-    set(_corekit_prev_build_testing ${BUILD_TESTING})
-    set(BUILD_TESTING OFF CACHE BOOL "" FORCE)
-    FetchContent_MakeAvailable(glog)
-    set(BUILD_TESTING ${_corekit_prev_build_testing} CACHE BOOL "" FORCE)
-  endif()
 endif()
+
+# glog: always build from local third-party source.
+set(WITH_GFLAGS OFF CACHE BOOL "" FORCE)
+set(BUILD_TESTING OFF CACHE BOOL "" FORCE)
+set(_corekit_prev_build_shared_libs ${BUILD_SHARED_LIBS})
+set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
+add_subdirectory("${COREKIT_GLOG_DIR}" "${CMAKE_BINARY_DIR}/3party/glog" EXCLUDE_FROM_ALL)
+set(BUILD_SHARED_LIBS ${_corekit_prev_build_shared_libs} CACHE BOOL "" FORCE)
 
 if (NOT TARGET glog::glog AND TARGET glog)
   add_library(glog::glog ALIAS glog)
@@ -74,27 +61,69 @@ set(COREKIT_EXTRA_INCLUDE_DIRS "")
 set(COREKIT_EXTRA_LIBS "")
 set(COREKIT_EXTRA_DEFS "")
 
+# mimalloc (optional, local source only)
 if (COREKIT_ENABLE_MIMALLOC_BACKEND)
-  find_path(COREKIT_MIMALLOC_INCLUDE_DIR mimalloc.h)
-  find_library(COREKIT_MIMALLOC_LIBRARY NAMES mimalloc mimalloc-static)
-  if (NOT COREKIT_MIMALLOC_INCLUDE_DIR OR NOT COREKIT_MIMALLOC_LIBRARY)
-    message(FATAL_ERROR "COREKIT_ENABLE_MIMALLOC_BACKEND=ON but mimalloc not found")
+  if (NOT EXISTS "${COREKIT_MIMALLOC_DIR}/CMakeLists.txt")
+    message(FATAL_ERROR "COREKIT_ENABLE_MIMALLOC_BACKEND=ON but missing ${COREKIT_MIMALLOC_DIR}")
   endif()
+
+  set(_corekit_mi_target "")
+  set(MI_BUILD_STATIC ON CACHE BOOL "" FORCE)
+  set(MI_BUILD_SHARED OFF CACHE BOOL "" FORCE)
+  set(MI_BUILD_OBJECT OFF CACHE BOOL "" FORCE)
+  set(MI_BUILD_TESTS OFF CACHE BOOL "" FORCE)
+  set(MI_OVERRIDE OFF CACHE BOOL "" FORCE)
+  set(MI_BUILD_BENCH OFF CACHE BOOL "" FORCE)
+  set(MI_USE_CXX OFF CACHE BOOL "" FORCE)
+  add_subdirectory("${COREKIT_MIMALLOC_DIR}" "${CMAKE_BINARY_DIR}/3party/mimalloc" EXCLUDE_FROM_ALL)
+
+  if (TARGET mimalloc-static)
+    set(_corekit_mi_target mimalloc-static)
+  elseif(TARGET mimalloc)
+    set(_corekit_mi_target mimalloc)
+  endif()
+
+  if (NOT _corekit_mi_target)
+    message(FATAL_ERROR "COREKIT_ENABLE_MIMALLOC_BACKEND=ON but mimalloc target not available")
+  endif()
+
   list(APPEND COREKIT_MEMORY_SOURCES src/memory/mimalloc_allocator.cpp)
-  list(APPEND COREKIT_EXTRA_INCLUDE_DIRS ${COREKIT_MIMALLOC_INCLUDE_DIR})
-  list(APPEND COREKIT_EXTRA_LIBS ${COREKIT_MIMALLOC_LIBRARY})
+  list(APPEND COREKIT_EXTRA_LIBS ${_corekit_mi_target})
   list(APPEND COREKIT_EXTRA_DEFS COREKIT_ENABLE_MIMALLOC_BACKEND=1)
 endif()
 
+# tbbmalloc (optional, local source only)
 if (COREKIT_ENABLE_TBBMALLOC_BACKEND)
-  find_path(COREKIT_TBBMALLOC_INCLUDE_DIR tbb/scalable_allocator.h)
-  find_library(COREKIT_TBBMALLOC_LIBRARY NAMES tbbmalloc)
-  if (NOT COREKIT_TBBMALLOC_INCLUDE_DIR OR NOT COREKIT_TBBMALLOC_LIBRARY)
-    message(FATAL_ERROR "COREKIT_ENABLE_TBBMALLOC_BACKEND=ON but tbbmalloc not found")
+  if (NOT EXISTS "${COREKIT_ONETBB_DIR}/CMakeLists.txt")
+    message(FATAL_ERROR "COREKIT_ENABLE_TBBMALLOC_BACKEND=ON but missing ${COREKIT_ONETBB_DIR}")
   endif()
+
+  set(_corekit_tbbmalloc_target "")
+  set(TBB_TEST OFF CACHE BOOL "" FORCE)
+  set(TBB_STRICT OFF CACHE BOOL "" FORCE)
+  set(TBB_EXAMPLES OFF CACHE BOOL "" FORCE)
+  set(TBBMALLOC_BUILD ON CACHE BOOL "" FORCE)
+  add_subdirectory("${COREKIT_ONETBB_DIR}" "${CMAKE_BINARY_DIR}/3party/oneTBB" EXCLUDE_FROM_ALL)
+
+  if (TARGET TBB::tbbmalloc)
+    set(_corekit_tbbmalloc_target TBB::tbbmalloc)
+  elseif(TARGET tbbmalloc)
+    set(_corekit_tbbmalloc_target tbbmalloc)
+  elseif(TARGET tbbmalloc_static)
+    set(_corekit_tbbmalloc_target tbbmalloc_static)
+  endif()
+
+  if (NOT _corekit_tbbmalloc_target)
+    message(FATAL_ERROR "COREKIT_ENABLE_TBBMALLOC_BACKEND=ON but tbbmalloc target not available")
+  endif()
+
   list(APPEND COREKIT_MEMORY_SOURCES src/memory/tbb_allocator.cpp)
-  list(APPEND COREKIT_EXTRA_INCLUDE_DIRS ${COREKIT_TBBMALLOC_INCLUDE_DIR})
-  list(APPEND COREKIT_EXTRA_LIBS ${COREKIT_TBBMALLOC_LIBRARY})
+  list(APPEND COREKIT_EXTRA_LIBS ${_corekit_tbbmalloc_target})
+  if (TARGET TBB::tbb)
+    list(APPEND COREKIT_EXTRA_LIBS TBB::tbb)
+  elseif(TARGET tbb)
+    list(APPEND COREKIT_EXTRA_LIBS tbb)
+  endif()
   list(APPEND COREKIT_EXTRA_DEFS COREKIT_ENABLE_TBBMALLOC_BACKEND=1)
 endif()
 
@@ -188,6 +217,10 @@ if (COREKIT_BUILD_TESTS)
   add_executable(interface_tests tests/interface_tests.cpp)
   target_link_libraries(interface_tests PRIVATE corekit)
   add_test(NAME interface_tests COMMAND interface_tests)
+
+  add_executable(ipc_tests tests/ipc_tests.cpp)
+  target_link_libraries(ipc_tests PRIVATE corekit)
+  add_test(NAME ipc_tests COMMAND ipc_tests)
 
   add_executable(memory_perf_compare tests/memory_perf_compare.cpp)
   target_link_libraries(memory_perf_compare PRIVATE corekit)
